syntax = "proto3";

package pb;

option go_package = "im-connect-go/internal/proto";
option java_multiple_files = true;
option java_package = "com.xzll.grpc";
option java_outer_classname = "MessageServiceProto";

// 消息转发服务（gRPC - 服务间调用）
service MessageService {
  // 推送服务端ACK到客户端（下行）
  rpc ResponseServerAck2Client (ServerAckPush) returns (WebBaseResponse) {}
  
  // 推送客户端ACK到客户端（下行）
  rpc ResponseClientAck2Client (ClientAckPush) returns (WebBaseResponse) {}
  
  // 推送撤回消息到客户端（下行）
  rpc SendWithdrawMsg2Client (WithdrawPush) returns (WebBaseResponse) {}
  
  // 推送好友请求到客户端（下行）
  rpc PushFriendRequest2Client (FriendRequestPush) returns (WebBaseResponse) {}
  
  // 推送好友响应到客户端（下行）
  rpc PushFriendResponse2Client (FriendResponsePush) returns (WebBaseResponse) {}
  
  // 跨服务器转发 Protobuf 消息（上行转发）
  rpc TransferC2CMsg (ImProtoRequest) returns (WebBaseResponse) {}
}

// Web基础响应
message WebBaseResponse {
  int32 code = 1;
  string message = 2;
  string data = 3;
  bool success = 4;
}

// =====================================================
// 精简高效的长连接 WebSocket 消息协议
// =====================================================

// 消息类型枚举（扩展版，兼容Go代码）
enum MsgType {
  MSG_TYPE_UNKNOWN = 0;
  
  // ========== 单聊相关 ==========
  C2C_SEND = 1;                     // C2C发送消息（上行）
  C2C_ACK = 2;                      // C2C消息确认（上行/下行）
  C2C_WITHDRAW = 3;                 // C2C撤回消息（上行/下行）
  C2C_MSG_PUSH = 5;                 // 服务端推送单聊消息（下行）
  
  // ========== 消息确认和撤回（扩展） ==========
  CLIENT_RECEIVED_MSG_ACK = 13;     // 客户端消息确认（上行）
  WITHDRAW_MSG_SEND = 14;           // 撤回消息发送（上行）
  WITHDRAW_MSG_RESPONSE = 15;       // 撤回消息响应（下行）
  MSG_DELIVERY_NOTIFICATION = 16;   // 消息送达通知（下行）
  MSG_WITHDRAW_NOTIFICATION = 17;   // 消息撤回通知（下行）
  
  // ========== 服务器相关 ==========
  SERVER_ACK = 18;                  // 服务器确认（下行）
  HEARTBEAT = 19;                   // 心跳消息（上行/下行）
  
  // ========== 群聊相关（预留，暂未实现） ==========
  GROUP_SEND = 7;                   // 群聊发送消息（上行）
  GROUP_MSG_PUSH = 8;               // 服务端推送群聊消息（下行）
  GROUP_ACK = 9;                    // 群聊消息确认（上行）
  GROUP_WITHDRAW = 10;              // 群聊撤回消息（上行/下行）
  
  // ========== 好友相关 ==========
  FRIEND_REQUEST = 11;              // 好友请求推送（下行）
  FRIEND_RESPONSE = 12;             // 好友响应推送（下行）
  
  // ========== 通用功能 ==========
  GET_BATCH_MSG_IDS = 4;            // 批量获取消息ID（上行）
  PUSH_BATCH_MSG_IDS = 6;           // 服务端推送消息ID列表（下行）
}

// Protobuf 响应码枚举
enum ProtoResponseCode {
  SUCCESS = 0;                      // 成功
  INVALID_REQUEST = 400;            // 无效请求
  UNAUTHORIZED = 401;               // 未授权
  FORBIDDEN = 403;                  // 禁止访问
  NOT_FOUND = 404;                  // 未找到
  INTERNAL_ERROR = 500;             // 内部错误
  SERVICE_UNAVAILABLE = 503;        // 服务不可用
}

// 基础消息包装（客户端->服务端）
message ImProtoRequest {
  MsgType type = 1;                 // 消息类型
  bytes payload = 2;                // 具体消息内容（根据type反序列化）
}

// 基础响应包装（服务端->客户端）
message ImProtoResponse {
  MsgType type = 1;                 // 消息类型
  bytes payload = 2;                // 具体消息内容
  ProtoResponseCode code = 3;       // 响应码
  string msg = 4;                   // 错误消息（可选）
}

// ========== 单聊上行消息（客户端→服务端）==========

// C2C发送消息请求 - 上行（优化版）
message C2CSendReq {
  bytes clientMsgId = 1;            // 客户端消息ID（UUID 16字节，优化：string 36B -> bytes 16B）
  fixed64 msgId = 2;                // 服务端消息ID（雪花算法，优化：string 19B -> fixed64 8B）
  fixed64 from = 3;                 // 发送人ID（雪花算法，优化：string 12B -> fixed64 8B）
  fixed64 to = 4;                   // 接收人ID（雪花算法，优化：string 12B -> fixed64 8B）
  int32 format = 5;                 // 消息格式（1:文本,2:图片,3:语音等）
  string content = 6;               // 消息内容
  fixed64 time = 7;                 // 客户端时间戳（毫秒，优化：int64 -> fixed64）
}

// 客户端消息确认请求 - 上行（Go扩展）
message ClientReceivedMsgAck {
  bytes clientMsgId = 1;            // 客户端消息ID（UUID 16字节）
  fixed64 msgId = 2;                // 服务端消息ID（雪花算法）
  fixed64 time = 3;                 // 确认时间戳（毫秒）
}

// 撤回消息发送请求 - 上行（Go扩展）
message WithdrawMsgSend {
  fixed64 msgId = 1;                // 要撤回的消息ID（雪花算法）
  bytes clientMsgId = 2;            // 客户端消息ID（UUID 16字节）
  fixed64 time = 3;                 // 撤回时间戳（毫秒）
}

// C2C消息确认请求 - 上行（原版兼容）
message C2CAckReq {
  bytes clientMsgId = 1;            // 客户端消息ID（UUID 16字节）
  fixed64 msgId = 2;                // 服务端消息ID（雪花算法）
  fixed64 from = 3;                 // 发送人ID（雪花算法）
  fixed64 to = 4;                   // 接收人ID（雪花算法）
  int32 status = 5;                 // 消息状态（3:未读，4:已读）
}

// C2C撤回消息请求 - 上行（原版兼容）
message C2CWithdrawReq {
  fixed64 msgId = 1;                // 要撤回的消息ID（雪花算法）
  fixed64 from = 2;                 // 发送人ID（雪花算法）
  fixed64 to = 3;                   // 接收人ID（雪花算法）
}

// 批量获取消息ID请求 - 上行（优化版）
message GetBatchMsgIdsReq {
  fixed64 userId = 1;               // 用户ID（雪花算法）
}

// ========== 单聊下行消息（服务端→客户端）==========

// 服务端推送C2C消息 - 下行（优化版）
message C2CMsgPush {
  bytes clientMsgId = 1;            // 客户端消息ID（UUID 16字节）
  fixed64 msgId = 2;                // 服务端消息ID（雪花算法）
  fixed64 from = 3;                 // 发送人ID（雪花算法）
  fixed64 to = 4;                   // 接收人ID（雪花算法）
  int32 format = 5;                 // 消息格式
  string content = 6;               // 消息内容
  fixed64 time = 7;                 // 服务器时间戳（毫秒）
}

// C2C 消息结构体（用于历史查询等）
message C2CMessage {
  fixed64 msgId = 1;                // 消息ID
  fixed64 from = 2;                 // 发送人ID
  fixed64 to = 3;                   // 接收人ID
  string content = 4;               // 消息内容
  int32 format = 5;                 // 消息格式
  fixed64 sendTime = 6;             // 发送时间
  bool isWithdrawn = 7;             // 是否已撤回
}

// 服务器确认消息 - 下行（Go扩展）
message ServerAck {
  bytes clientMsgId = 1;            // 客户端消息ID（UUID 16字节）
  fixed64 msgId = 2;                // 服务端消息ID（雪花算法）
  bool success = 3;                 // 是否成功
  fixed64 timestamp = 4;            // 时间戳
}

// 消息送达通知 - 下行（Go扩展）
message MessageDeliveryNotification {
  fixed64 msgId = 1;                // 消息ID
  bytes clientMsgId = 2;            // 客户端消息ID
  fixed64 deliveredAt = 3;          // 送达时间
  bool receiverAck = 4;             // 接收方确认
}

// 消息撤回通知 - 下行（Go扩展）
message MessageWithdrawNotification {
  fixed64 msgId = 1;                // 消息ID
  bytes clientMsgId = 2;            // 客户端消息ID
  fixed64 withdrawnAt = 3;          // 撤回时间
  fixed64 withdrawnBy = 4;          // 撤回者ID
  string originalContent = 5;       // 撤回提示文本
}

// 撤回消息响应 - 下行（Go扩展）
message WithdrawMsgResponse {
  fixed64 msgId = 1;                // 消息ID
  bytes clientMsgId = 2;            // 客户端消息ID
  bool success = 3;                 // 是否成功
  string message = 4;               // 响应消息
  fixed64 timestamp = 5;            // 时间戳
}

// 批量消息ID推送 - 下行（优化版）
message BatchMsgIdsPush {
  repeated fixed64 msgIds = 1;      // 消息ID列表（雪花算法）
} 

// 服务端ACK推送 - 下行（gRPC专用，优化版）
message ServerAckPush {
  fixed64 toUserId = 1;             // 接收人ID（雪花算法）
  bytes clientMsgId = 2;            // 客户端消息ID（UUID 16字节）
  fixed64 msgId = 3;                // 服务端消息ID（雪花算法）
  int32 msgReceivedStatus = 5;      // 1=SERVER_RECEIVED
  fixed64 receiveTime = 7;          // 接收时间戳（毫秒）
}

// 客户端ACK推送 - 下行（gRPC专用，优化版）
message ClientAckPush {
  fixed64 toUserId = 1;             // 接收人ID（雪花算法）
  bytes clientMsgId = 2;            // 客户端消息ID（UUID 16字节）
  fixed64 msgId = 3;                // 服务端消息ID（雪花算法）
  int32 msgReceivedStatus = 5;      // 3=UN_READ, 4=READED
  fixed64 receiveTime = 7;          // 接收时间戳（毫秒）
}

// 撤回消息推送 - 下行（gRPC专用，优化版）
message WithdrawPush {
  fixed64 toUserId = 1;             // 接收人ID（雪花算法）
  fixed64 msgId = 2;                // 消息ID（雪花算法）
  fixed64 fromUserId = 4;           // 发送人ID（雪花算法）
}

// 好友请求推送 - 下行（gRPC专用，优化版）
message FriendRequestPush {
  fixed64 toUserId = 1;             // 接收人ID（雪花算法）
  bytes requestId = 2;              // 请求ID（UUID，16字节）
  fixed64 fromUserId = 3;           // 申请人ID（雪花算法）
  string fromUserName = 4;          // 申请人昵称
  string fromUserAvatar = 5;        // 申请人头像
  string requestMessage = 6;        // 申请消息
  int32 status = 7;                 // 状态：0=待处理, 1=已同意, 2=已拒绝
  fixed64 createTime = 8;           // 创建时间（毫秒）
  string pushTitle = 9;             // 推送标题
  string pushContent = 10;          // 推送内容
}

// 好友响应推送 - 下行（gRPC专用，优化版）
message FriendResponsePush {
  fixed64 toUserId = 1;             // 接收人ID（雪花算法）
  bytes requestId = 2;              // 请求ID（UUID，16字节）
  fixed64 fromUserId = 3;           // 响应人ID（雪花算法）
  string fromUserName = 4;          // 响应人昵称
  string fromUserAvatar = 5;        // 响应人头像
  int32 status = 6;                 // 状态：1=已同意, 2=已拒绝
  fixed64 responseTime = 7;         // 响应时间（毫秒）
  string pushTitle = 8;             // 推送标题
  string pushContent = 9;           // 推送内容
}

// ================= 群聊相关消息（预留，暂未实现业务逻辑） =================

// 群聊发送消息请求 - 上行（优化版，预留）
message GroupSendReq {
  fixed64 msgId = 1;                // 消息ID（雪花算法）
  fixed64 from = 2;                 // 发送人ID（雪花算法）
  fixed64 groupId = 3;              // 群ID（雪花算法）
  int32 format = 4;                 // 消息格式（1:文本,2:图片,3:语音等）
  string content = 5;               // 消息内容
  fixed64 time = 6;                 // 客户端时间戳（毫秒）
}

// 群聊消息推送 - 下行（优化版，预留）
message GroupMsgPush {
  fixed64 msgId = 1;                // 消息ID（雪花算法）
  fixed64 from = 2;                 // 发送人ID（雪花算法）
  string fromNickname = 3;          // 发送人昵称（群聊显示用）
  string fromAvatar = 4;            // 发送人头像（群聊显示用）
  fixed64 groupId = 5;              // 群ID（雪花算法）
  string groupName = 6;             // 群名称
  int32 format = 7;                 // 消息格式
  string content = 8;               // 消息内容
  fixed64 time = 9;                 // 服务器时间戳（毫秒）
  int32 memberCount = 10;           // 群成员数（可选）
}

// 群聊消息确认请求 - 上行（优化版，预留）
message GroupAckReq {
  fixed64 msgId = 1;                // 消息ID（雪花算法）
  fixed64 userId = 2;               // 确认人ID（雪花算法）
  fixed64 groupId = 3;              // 群ID（雪花算法）
  int32 status = 4;                 // 消息状态（3:未读，4:已读）
}

// 群聊撤回消息请求 - 上行（优化版，预留）
message GroupWithdrawReq {
  fixed64 msgId = 1;                // 要撤回的消息ID（雪花算法）
  fixed64 from = 2;                 // 发送人ID（雪花算法）
  fixed64 groupId = 3;              // 群ID（雪花算法）
  fixed64 withdrawTime = 4;         // 撤回时间戳
}

// 群聊撤回消息推送 - 下行（优化版，预留）
message GroupWithdrawPush {
  fixed64 msgId = 1;                // 被撤回的消息ID（雪花算法）
  fixed64 from = 2;                 // 撤回操作人ID（雪花算法）
  fixed64 groupId = 3;              // 群ID（雪花算法）
  string operatorNickname = 4;      // 操作人昵称（用于显示"XXX撤回了一条消息"）
  fixed64 withdrawTime = 5;         // 撤回时间戳
  bool isAdmin = 6;                 // 是否为管理员撤回（true=管理员撤回他人消息）
}
